--- a/styles/Home/_partners.scss
+++ b/styles/Home/_partners.scss
@@ -17,6 +17,7 @@
       img {
         height: 7rem;
         width: auto;
+        object-fit: contain;
       }
     }
   }
